--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,10 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.13.0</version>       
         <configuration>
-          <source>3.13.0</source>
-          <target>3.13.0</target>
+          <source>21</source>
+          <target>21</target>
         </configuration>
       </plugin>
 
